libview: Take page border into account when computing selections

origin commit:
https://git.gnome.org/browse/evince/commit/?h=gnome-3-10&id=b9c32bc

libview: Fix a crash when selecting more than one page
https://bugzilla.gnome.org/show_bug.cgi?id=702874
origin commit:
https://git.gnome.org/browse/evince/commit/?h=gnome-3-10&id=e6fd3ff

Make sure we never use negative coordinates in selection rectangle
https://bugzilla.gnome.org/show_bug.cgi?id=702874
origin commit:
https://git.gnome.org/browse/evince/commit/?h=gnome-3-10&id=4a88904